--- a/chao.conf
+++ b/chao.conf
@@ -1,6 +1,6 @@
 // ==/UserScript==
 #雪梨https://www.pearnew.live/?ivcode=RTYM
-^https:\/\/m\.pearkin\.com\/api\/(movie\/WatchMovie|account\/IsVip|Account\/CheckVip|account\/IndexDetail|account\/IsSafeUser|PictureSet\/LookPhoto|account\/Milk|video\/watch.*|video\/WatchCount|account\/UserSetting|account\/suport|download\/CheckDownloadTorrent) url script-response-body https://gitee.com/bu8695516/YCJB/raw/master/pear.js
+^https:\/\/m\.pearkin\.com\/api\/(movie\/WatchMovie|account\/IsVip|Account\/CheckVip|account\/IndexDetail|account\/IsSafeUser|PictureSet\/LookPhoto|account\/Milk|video\/watch.*|video\/WatchCount|account\/UserSetting|account\/suport|download\/CheckDownloadTorrent) url script-response-body https://raw.githubusercontent.com/81601110/81601110/main/pear.js
 #^https://(bkcd.b-cdn.net|souhu.mett.me|m.pearkin.com|www.baidu.com2.club|cn.baidu-ch.com)\/api(\/account|\/movie|\/video)(\/IndexDetail|\/IsVip|\/WatchMovieNew|\/watch|\/CheckVip)  url script-response-body  https://raw.githubusercontent.com/Kyle0816/QuantumultX/main/xl.js
 
 # > 微信公众号去广告WeChat Official Account @ddgksf2013
