--- a/chao.conf
+++ b/chao.conf
@@ -14,45 +14,50 @@
 ^https:\/\/mb3admin\.com\/admin\/service(\/registration\/validateDevice|\/appstore\/register|\/registration\/validate|\/registration\/getStatus|\/supporter\/retrievekey) url script-echo-response https://subweb.s3.fr-par.scw.cloud/Script/embycrack.js
 
 #WPS解锁  超级会员、wps会员、稻壳会员 (By eHpo)
-^https://account.wps.*/api/users/ url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Wps.js
+^https?:\/\/account\.wps\.cn\/api\/users url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Wps.js
+
+# ✅ 扫描全能王
+^https:\/\/(api|api-cs)\.intsig\.net\/purchase\/cs\/query_property\? url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/camscanner.js
 
 
-
-#解锁百度云盘会员（byddgksf2013）
-https:\/\/pan\.baidu\.com\/rest\/2\.0\/membership\/user url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/bdcloud.js
-# 百度网盘 解除在线视频倍率/清晰度
-^https:\/\/pan\.baidu\.com\/rest\/\d\.\d\/membership\/user url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/BaiduCloud.js
+# ✅ 百度网盘
+https:\/\/pan\.baidu\.com\/rest\/\d\.\d\/membership\/user url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/bdcloud.js
 
 # 去微博应用内广告 (By yichahucha)
 ^https?://(sdk|wb)app.uve.weibo.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/wb_launch.js
 ^https?://m?api.weibo.c(n|om)/2/(statuses/(unread|extend|positives/get|(friends|video)(/|_)(mix)?timeline)|stories/(video_stream|home_list)|(groups|fangle)/timeline|profile/statuses|comments/build_comments|photo/recommend_list|service/picfeed|searchall|cardlist|page|!/photos/pic_recommend_status|video/tiny_stream_video_list) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/wb_ad.js
 
-
-# 酷我(20220213) @ddgksf2013
-# ～ KWYY_酷我音樂Ad_Block@DivineEngine
+# ～ KWYY_酷我音乐_AdBlock@DivineEngine
 ^https?:\/\/rich\.kuwo\.cn\/AdService\/kaiping\/.+ url reject
-# ～ KWYY_酷我音樂Ad_Block@DivineEngine
+# ～ KWYY_酷我音乐_AdBlock@DivineEngine
 ^https?:\/\/.+\.kwcdn\.kuwo\.cn\/star\/upload\/.+ url reject
-# ～ KWYY_酷我音樂Ad_Block@DivineEngine
+# ～ KWYY_酷我音乐_AdBlock@DivineEngine
 ^https?:\/\/mobilead\.kuwo\.cn\/EcomResourceServer\/Ad url reject
-# ～ KWYY_酷我聽書Block_ad@ddgksf2013
+
+# ～ KWYY_酷我听书_Blockad@ddgksf2013
 https?:\/\/audiobookpay\.kuwo\.cn/a\.p\?op=get_advertright url reject-dict
-# ～ KWYY_酷我聽書PayInfo@ddgksf2013
-https?:\/\/omp-audiobookpay\.lrts\.me\/a\.p url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/kwyy.js
-# ～ KWYY_酷我聽書PayInfo@ddgksf2013
+# ～ KWYY_酷我听书_Blockad@ddgksf2013
+https?:\/\/omp-audiobookpay\.lrts\.me\/a\.p\?op=get_advertright url reject-dict
+# ～ KWYY_酷我听书_PayInfo@ddgksf2013
+https?:\/\/omp-audiobookpay\.lrts\.me\/a\.p$ url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/kwyy.js
+# ～ KWYY_酷我听书_PayInfo@ddgksf2013
 ^https?:\/\/audiobookpay\.kuwo\.cn/a\.p url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/kwyy.js
-# ～ KWYY_酷我聽書UserInfo@ddgksf2013
+# ～ KWYY_酷我听书_UserInfo@ddgksf2013
 https://tingshu.kuwo.cn/v2/api/user/info url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/kwyy.js
-# ～ KWYY_酷我聽書UserInfo@ddgksf2013
+# ～ KWYY_酷我听书_UserInfo@ddgksf2013
 https?:\/\/audiobooks\.kuwo\.cn\/v2\/api\/user\/info url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/kwyy.js
-# ～ KWYY_酷我聽書UserStatus@ddgksf2013
+# ～ KWYY_酷我听书_UserStatus@ddgksf2013
 https?:\/\/tingshu\.kuwo\.cn\/v2\/api\/pay\/vip\/extraVipStatus url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/kwyy.js
-# ～ KWYY_酷我解鎖Vip皮膚設置@ddgksf2013
+
+# ～ KWYY_酷我音乐_解锁Vip皮肤设置@ddgksf2013
 ^https?:\/\/vip1\.kuwo\.cn\/vip\/v2\/theme  url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/kwyy.js
-# ～ KWYY_酷我解鎖無損下載（先選聽無損，再下載無損）@ddgksf2013
-^https?:\/\/musicpay\.kuwo\.cn\/music\.pay\?newver=\d url script-request-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/kwyy.js
-# ～ KWYY_酷我音樂會員@ddgksf2013
+# ～ KWYY_酷我音乐_解锁无损下载（先选听无损，再下载无损）@ddgksf2013
+^https?:\/\/musicpay\.kuwo\.cn\/music\.pay\?newver=\d$ url script-request-body https://github.com/ddgksf2013/Cuttlefish/raw/master/Crack/kuwodl.js
+# ～ KWYY_酷我音乐_解锁会员@ddgksf2013
 ^https?:\/\/vip1\.kuwo\.cn\/(vip\/v2\/user\/vip|vip\/spi/mservice) url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/kwyy.js
+# ～ KWYY_酷我音乐_解锁NEW会员@ddgksf2013
+^https?:\/\/vip1\.kuwo\.cn\/vip\/enc\/user\/ url script-request-header https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/kuwovip.js
+
 
 ##圈x京东比价
 ^https?://api\.m\.jd\.com/(client\.action|api)\?functionId=(wareBusiness|serverConfig|basicConfig|lite_wareBusiness|pingou_item) url script-response-body https://raw.githubusercontent.com/Tartarus2014/Script/master/jd_price_lite.js
