--- a/chao.conf
+++ b/chao.conf
@@ -29,8 +29,7 @@ https:\/\/pan\.baidu\.com\/rest\/\d\.\d\/membership\/user url script-response-bo
 
 
 #酷我音乐SVIP会员
-^https?:\/\/.*\.kuwo\.cn\/(vip\/v2\/user\/vip|vip\/spi/mservice) url script-response-body http://ox.xmkczs.com/quantumultX/kuwo.js
-^(https?:\/\/.*\.kuwo\.cn\/.+?)uid\=\d+ url 302 $1uid=6
+^https?:\/\/.*\.(kuwo|lrts)\.(cn|me)\/(a\.p|music\.pay|(vip\/(v2|enc)\/(theme|user\/vip))|(EcomResource|(Mobile)?Ad)Serv(er|ice)).* url script-response-body https://raw.githubusercontent.com/nameking77/Qx/main/rewrite/kw.js
 
 ##圈x京东比价
 ^https?://api\.m\.jd\.com/(client\.action|api)\?functionId=(wareBusiness|serverConfig|basicConfig|lite_wareBusiness|pingou_item) url script-response-body https://raw.githubusercontent.com/Tartarus2014/Script/master/jd_price_lite.js
@@ -38,4 +37,4 @@ https:\/\/pan\.baidu\.com\/rest\/\d\.\d\/membership\/user url script-response-bo
 ^http:\/\/.+\/amdc\/mobileDispatch url script-request-body https://raw.githubusercontent.com/zwf234/rules/master/js/tb_price.js
 ^https?:\/\/trade-acs\.m\.taobao\.com\/gw\/mtop\.taobao\.detail\.getdetail url script-response-body https://raw.githubusercontent.com/zwf234/rules/master/js/tb_price.js
 
-hostname = bkcd.b-cdn.net, cn.youku-ca.com, souhu.mett.me, m.pearkin.com, www.baidu.com2.club, account.wps.cn, pan.baidu.com, api.m.jd.com, trade-acs.m.taobao.com， awmattack.*.com, mb3admin.com, -redirector*.googlevideo.com,*.googlevideo.com,www.youtube.com,s.youtube.com,youtubei.googleapis.com, musicpay.kuwo.cn, vip1.kuwo.cn, audiobookpay.kuwo.cn, tingshu.kuwo.cn
+hostname = bkcd.b-cdn.net, cn.youku-ca.com, souhu.mett.me, m.pearkin.com, www.baidu.com2.club, account.wps.cn, pan.baidu.com, api.m.jd.com, trade-acs.m.taobao.com， awmattack.*.com, mb3admin.com, -redirector*.googlevideo.com,*.googlevideo.com,www.youtube.com,s.youtube.com,youtubei.googleapis.com, musicpay.kuwo.cn, vip1.kuwo.cn, audiobookpay.kuwo.cn, tingshu.kuwo.cn, *.kuwo.cn, *.lrts.me
